--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.19.2",
     "express": "^4.17.3",
+    "mongoose": "^6.2.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
