--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server.js",
-    "client": "cd client && cd carpark-app && npm start",
+    "client": "cd .. && cd client && cd carpark-app && npm start",
     "start": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
