--- a/server/package.json
+++ b/server/package.json
@@ -2,12 +2,10 @@
   "name": "carpark-where",
   "version": "1.0.0",
   "description": "car park checker system",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon server.js",
-    "client": "cd .. && cd client && cd carpark-app && npm start",
-    "start": "concurrently \"npm run server\" \"npm run client\""
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +23,7 @@
     "body-parser": "^1.19.2",
     "concurrently": "^7.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.2",
